syntax = "proto3";

package com.teddy.api.uaa;

option go_package = "proto";

import "github.com/micro/go-api/proto/api.proto";

service Uaa {
	rpc Register(go.api.Request) returns (go.api.Response) {}
	rpc Login(go.api.Request) returns (go.api.Response) {}
    rpc Logout(go.api.Request) returns (go.api.Response) {}
    rpc ChangePassword(go.api.Request) returns (go.api.Response) {}
    rpc SendEmailCaptcha(go.api.Request) returns (go.api.Response) {}
    rpc SendPhoneCaptcha(go.api.Request) returns (go.api.Response) {}
}
