syntax = "proto3";

package teddy.srv.captcha;

option go_package = "captcha";

import "github.com/golang/protobuf/ptypes/empty/empty.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service Captcha {
    rpc GetCaptchaId (GetCaptchaIdReq) returns (GetCaptchaIdResp) {}
    rpc GetImageData (GetImageDataReq) returns (GetImageDataResp) {}
    rpc GetVoiceData (GetVoiceDataReq) returns (GetVoiceDataResp) {}
    rpc GetRandomById (GetRandomReq) returns (GetRandomResp) {}
    rpc Verify(VerifyReq) returns (VerifyResp) {}
}

message GetCaptchaIdReq {
    uint32 len = 1;
}

message GetCaptchaIdResp {
    string id = 1;
}

message GetImageDataReq {
    string id = 1;
    uint32 width = 2;
    uint32 height = 3;
    bool reload = 4;
}

message GetImageDataResp {
    bytes image = 1;
}

message GetVoiceDataReq {
    string id = 1;
    string lang = 2;
    bool reload = 3;
}

message GetVoiceDataResp {
    bytes voice_wav = 1;
}

message GetRandomReq {
    uint32 len = 1;
    string id = 2;
}

message GetRandomResp {
    string code = 1;
}

enum CaptchaType {
    IMAGE = 0;
    RANDOM_BY_ID = 1;
    VOICE = 2;
}

message VerifyReq {
    CaptchaType type = 1;
    string id = 2;
    string code = 3;
}

message VerifyResp {
    bool correct = 1;
}